# py-trutankless

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/: build.yml
.github/workflows/: build.yml
pytrutankless/: __init__.py  api.py  locations.json
