[metadata]
description-file = README.md
# name = pytrutankless
# version = 0.0.1
# author = Matt Coleman
# author_email = mdcoleman001@gmail.com
# description = A Python client library for the TruTankless API
# long_description = file: README.md
# long_description_content_type = text/markdown
# license_file = LICENSE
# classifiers = 
#     Development Status :: 3 - Alpha
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
# project_urls = 
#     Source = https://github.com/colemamd/pytrutankless
#     Bug Reports = https://github.com/colemamd/pytrutankless/issues
#     Release Notes = https://github.com/colemamd/pytrutankless/releases/

# [options]
# python_requires = >3.8, <4
# packages = find:
# install_requires = 
#     meteor-ejson == 1.1.0

# [flake8]
# max-line-length = 88
# max-complexity = 10
# select = E9,F63,F7,F82